<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_todayReminder"
        android:icon="@drawable/ic_outline_calendar_today_24"
        android:title="@string/title_todayReminder"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_drugRecords"
        android:icon="@drawable/ic_outline_pill_24px"
        android:title="@string/title_drugRecords"
        app:showAsAction="always"/>
    <item
        android:id="@+id/navigation_takeRecords"
        android:icon="@drawable/ic_outline_history_24"
        android:title="@string/title_takeRecords"
        app:showAsAction="always"/>

    <item
        android:id="@+id/navigation_pillBoxManagement"
        android:icon="@drawable/ic_outline_inbox_24"
        android:title="@string/title_pillBoxManagement"
        app:showAsAction="always"/>

</menu>