<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_drug_interaction_lookup"
            android:icon="@drawable/ic_outline_shuffle_24"
            android:title="@string/title_drug_interaction_lookup" />

        <item
            android:id="@+id/nav_fontSize"
            android:icon="@drawable/ic_baseline_format_size_24"
            android:title="@string/title_fontSize" />

        <item
            android:id="@+id/nav_language"
            android:icon="@drawable/ic_outline_language_24"
            android:title="@string/switch_ch_en" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_outline_logout_24"
            android:title="@string/sign_out"
            app:showAsAction="always" />

    </group>
</menu>