<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_todayReminder">

    <fragment
        android:id="@+id/navigation_todayReminder"
        android:name="com.junting.drug_android_frontend.ui.todayReminder.TodayReminderFragment"
        android:label="@string/title_todayReminder"
        tools:layout="@layout/fragment_today_reminder" />

    <fragment
        android:id="@+id/navigation_drugRecords"
        android:name="com.junting.drug_android_frontend.ui.drugRecords.DrugRecordsFragment"
        android:label="@string/title_drugRecords"
        tools:layout="@layout/fragment_drug_records" />

    <fragment
        android:id="@+id/navigation_takeRecords"
        android:name="com.junting.drug_android_frontend.ui.takeRecords.TakeRecordsFragment"
        android:label="@string/title_takeRecords"
        tools:layout="@layout/fragment_take_records" />

    <fragment
        android:id="@+id/navigation_pillBoxManagement"
        android:name="com.junting.drug_android_frontend.ui.pillBoxManagement.PillBoxManagementFragment"
        android:label="@string/title_pillBoxManagement"
        tools:layout="@layout/fragment_pill_box_management" />

    <fragment
        android:id="@+id/navigation_tools"
        android:name="com.junting.drug_android_frontend.ui.tools.ToolsFragment"
        android:label="@string/title_tools"
        tools:layout="@layout/fragment_tools" />
</navigation>