<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="15dp">


    <TextView
        android:id="@+id/tvDelay10Minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/late_10_min"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/tvDelay30Minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/late_30_min"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <TextView
        android:id="@+id/tvDelay45Minutes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/late_45_min"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@drawable/list_divider" />

    <TextView
        android:id="@+id/tvSkip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:background="?android:attr/selectableItemBackground"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"/>


</LinearLayout>
