<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <!-- Color Block -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/wel_background" />

        <!-- ImageView -->
        <ImageView
            android:id="@+id/wel_titleImage"
            android:layout_width="200px"
            android:layout_height="200px"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/app_image" />

        <!--   TextView     -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="23dp"
            android:text="@string/app_name"
            android:textSize="28dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description_two"
        android:textSize="18dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <Button
        android:id="@+id/intro_google_Btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_one"
        android:drawableLeft="@drawable/google_logo"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/IntroductoryButtonStyle"
        android:visibility="visible"/>

    <Button
        android:id="@+id/intro_login_correct_Btn"
        android:layout_width="240dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/btn_login_correct"
        android:drawableLeft="@drawable/baseline_check_circle_24"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView"
        style="@style/IntroductoryButtonStyle"
        android:clickable="false"
        android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>